# Torque3D

./: CMakeLists.txt
Engine/lib/: CMakeLists.txt  Torque_postBuild.cmake  torqueIOSLibs.cmake
Engine/lib/convexDecomp/: NvSimpleTypes.h
Engine/lib/glad/: CMakeLists.txt
Engine/lib/glad/src/: glad.c
Engine/lib/libogg/: Torque_postBuild.cmake
Engine/lib/libtheora/: Torque_postBuild.cmake
Engine/lib/libvorbis/: Torque_postBuild.cmake
Engine/lib/nativeFileDialogs/: Torque_postBuild.cmake
Engine/lib/spirv-cross/: spirv_hlsl.cpp
Engine/source/: CMakeLists.txt  torqueIOS.cmake  torqueLinux.cmake  torqueMac.cmake  torqueWin.cmake
Engine/source/T3D/: aiClient.cpp  aiConnection.cpp  aiPlayer.cpp  constraints.cpp  constraints.h  convexShape.cpp  convexShape.h  gameFunctions.cpp  guiMaterialPreview.cpp  guiObjectView.cpp  lightFlareData.cpp  objectTypes.h  pathCamera.cpp  pathShape.cpp  physicalZone.cpp  player.cpp  pointLight.cpp  portal.cpp  rigidShape.cpp  shapeBase.cpp  spotLight.cpp  tsStatic.cpp
Engine/source/T3D/assets/: ModelAsset.cpp  ModelAsset.h  SoundAsset.cpp  assetMacroHelpers.h
Engine/source/T3D/decal/: decalManager.cpp
Engine/source/T3D/examples/: renderCSExample.cpp  renderCSExample.h  renderGSExample.cpp  renderGSExample.h
Engine/source/T3D/fps/: guiCrossHairHud.cpp  guiShapeNameHud.cpp
Engine/source/T3D/fx/: explosion.cpp  groundCover.cpp  groundCover.h  particle.cpp  particleEmitter.cpp  precipitation.cpp  splash.cpp
Engine/source/T3D/gameBase/: gameConnection.cpp
Engine/source/T3D/lighting/: IBLUtilities.cpp
Engine/source/T3D/physics/: physicsDebris.cpp  physicsObject.h  physicsOctree.h  physicsPlugin.h  physicsShape.cpp
Engine/source/T3D/sfx/: sfxEmitter.cpp  sfxEmitter.h
Engine/source/T3D/turret/: aiTurretShape.cpp  turretShape.cpp
Engine/source/T3D/vehicles/: flyingVehicle.cpp  vehicle.cpp  wheeledVehicle.cpp
Engine/source/afx/: afxCamera.cpp  afxEffectWrapper.cpp
Engine/source/afx/ea/: afxEA_AnimClip.cpp
Engine/source/afx/ui/: afxSpellCastBar.cpp  afxStatusBar.cpp
Engine/source/afx/util/: afxTriBoxCheck2D_T3D.cpp
Engine/source/afx/xm/: afxXM_BoxAdapt.cpp  afxXM_HeightSampler.cpp  afxXM_WaveBase.h
Engine/source/app/: badWordFilter.cpp
Engine/source/app/net/: net.cpp  serverQuery.cpp  (+1 more)
Engine/source/cinterface/: c_controlInterface.cpp
Engine/source/collision/: convex.cpp  depthSortList.cpp  extrudedPolyList.cpp  gjk.cpp  optimizedPolyList.cpp  planeExtractor.cpp
Engine/source/console/: console.h  consoleFunctions.cpp  dynamicTypes.h  engineObject.cpp  engineObject.h  simEvents.h  telnetDebugger.cpp
Engine/source/core/: color.h  dataChunker.h  resource.h  stringTable.h  volume.h
Engine/source/environment/: VolumetricFog.cpp  VolumetricFogRTManager.cpp  meshRoad.cpp  oceanObject.cpp  oceanObject.h  river.cpp  scatterSky.cpp  scatterSky.h  sun.cpp  sun.h  timeOfDay.cpp  waterObject.cpp
Engine/source/forest/: forestWindEmitter.cpp  windDeformation.cpp
Engine/source/gfx/: gFont.cpp  genericConstBuffer.h  gfxAdapter.h  gfxCubemap.cpp  gfxDevice.cpp  gfxDevice.h  gfxDrawUtil.cpp  gfxDrawUtil.h  gfxEnums.h  gfxInit.cpp  gfxShader.cpp  gfxShader.h  gfxStateBlock.cpp  gfxStateBlock.h  gfxStructs.cpp  gfxStructs.h  gfxTarget.h  gfxTextureArray.cpp  gfxTextureArray.h  gfxTextureManager.cpp  gfxTextureObject.cpp  gfxTextureProfile.h  screenshot.cpp
Engine/source/lighting/: lightInfo.cpp  lightInfo.h  lightQuery.cpp
Engine/source/materials/: matTextureTarget.h  materialDefinition.cpp  materialDefinition.h  materialFeatureData.h  materialFeatureTypes.cpp  materialFeatureTypes.h  materialManager.h  processedCustomMaterial.cpp  processedShaderMaterial.cpp  shaderBlueprint.cpp  shaderBlueprint.h  shaderData.cpp  shaderData.h
Engine/source/math/: mAngAxis.cpp  mAngAxis.h  mBox.cpp  mConsoleFunctions.cpp  mEase.h  mMathFn.h  mMath_C.cpp  mMatrix.cpp  mMatrix.h  mOrientedBox.cpp  mPlane.cpp  mPlane.h  mPoint.cpp  mPoint.h  mPoint2.h  mPoint3.h  mPoint4.h  mQuat.cpp  mQuat.h  mVec.h  mathUtils.cpp  mathUtils.h
Engine/source/navigation/: navMesh.cpp
Engine/source/platform/: platform.h  platformFont.h  platformMemory.cpp  tmm_off.h  tmm_on.h
Engine/source/platformIOS/: iosAppDelegate.h  iosAppDelegate.mm  iosConsole.h  iosConsole.mm  iosFileIO.mm  iosMain.m  iosMain.mm  iosMemory.mm  iosUtils.h  iosViewController.h  iosViewController.mm  iosVolume.h  iosVolume.mm  iosWindow.mm
Engine/source/platformMac/: macFileIO.mm  macFont.mm  macMain.mm
Engine/source/platformPOSIX/: POSIXStdConsole.h
Engine/source/platformSDL/: sdlPlatformGL.cpp
Engine/source/platformWin32/: winCPUInfo.cpp  winDirectInput.cpp
Engine/source/renderInstance/: renderBinManager.h  renderPassManager.h  renderProbeMgr.cpp
Engine/source/scene/: reflectionManager.h  sceneContainer.cpp  sceneObject.cpp  sceneObject.h  sceneQueryUtil.h  sceneRenderState.h
Engine/source/sfx/: sfxCommon.h  sfxDescription.cpp  sfxFileStream.cpp  sfxParameter.cpp  sfxSource.cpp  sfxSystem.cpp
Engine/source/sfx2/: sfxReverbProperties.cpp  sfxStream.cpp  sfxSystem.cpp  sfxSystem.h
Engine/source/shaderGen/: shaderGen.cpp  shaderGen.h
Engine/source/sim/: actionMap.cpp
Engine/source/terrain/: terrCell.cpp  terrData.cpp  terrExport.cpp  terrRender.cpp
Engine/source/testing/: mathFunctionTest.cpp  mathPointTest.cpp  unitTesting.cpp
Engine/source/ts/: tsCollision.cpp  tsLastDetail.cpp  tsMesh.cpp  tsMeshFit.cpp  tsShape.h  tsShapeConstruct.cpp  tsShapeEdit.cpp  tsShapeInstance.cpp  tsThread.cpp
Engine/source/util/: imposterCapture.cpp  noise2d.cpp  triBoxCheck.cpp
Engine/source/windowManager/: windowInputGenerator.cpp
Tools/CMake/: iOS.cmake  ios.toolchain.cmake  torque3d.cmake  torqueConfig.h.in  torque_apple_options.cmake  torque_configs.cmake  torque_ios_config.cmake  torque_libconfig.cmake  torque_macros.cmake  torque_options.cmake
Tools/CMake/MacOSX/: torque_mac_config.cmake
Tools/CMake/iOS/: torque_ios_config.cmake
Tools/CMake/modules/: libsndfile.cmake  module_stockPhysics.cmake  navigation.cmake
Tools/CMake/setup/: torque-ios-configs.cmake
(+249 files in other folders)
